examples/errors/extern_outside_stdlib/main.hd
extern fn printf(fmt: string, ...): int;

fn main(): int {
    printf("hello\n");
    return 0;
}
